# opentutor

./: Cargo.toml  README.md
src/: display.rs  main.rs
src/commands/: achievements.rs  best_hours.rs  bookmark.rs  challenge.rs  compare.rs  config.rs  cram.rs  daily.rs  diagnose.rs  explain.rs  export.rs  flashcard.rs  focus.rs  forecast.rs  glossary.rs  heatmap.rs  history.rs  interleave.rs  learn.rs  leech.rs  mastery.rs  mistakes.rs  mix.rs  mod.rs  path.rs  priorities.rs  progress.rs  quiz.rs  recap.rs  recommend.rs  reset.rs  retention.rs  review.rs  search.rs  stats.rs  streak.rs  study_plan.rs  subjects.rs  summary.rs  trend.rs  (+2 more)
src/db/: mod.rs  schema.rs  seed.rs
src/engine/: adaptive.rs  mod.rs  quiz.rs  spaced.rs
